# soarhigh

./: .gitignore  .mcp.json  CLAUDE.md
backend/: .gitignore  .pre-commit-config.yaml  TODO.md  main.py  pyproject.toml  requirements.txt  status.md  supabase.sql  vercel.json
backend/.hooks/: pre-commit
backend/app/: config.py  main.py
backend/app/agent/: agent.py  history.py  prompts.py  store.py  timing.py  tools.py  validators.py
backend/app/agent/tests/: conftest.py  test_agent_smoke.py  test_history.py  test_models.py  test_route.py  test_store.py  test_timing.py  test_tools.py  test_validators.py
backend/app/agents/: __init__.py
backend/app/agents/general/: agent.py  agent_public.py  models.py  models_public.py  prompts.py  prompts_public.py  tools.py  tools_public.py
backend/app/agents/meeting/: __init__.py  agent.py  models.py  normalize.py  prompts.py  save_gate.py  segment_ids.py  timing.py  tools.py  validators.py
backend/app/agents/router/: __init__.py  classifier.py  models.py  store.py
backend/app/agents/runtime/: __init__.py  capabilities.py  contracts.py  envelopes.py  history.py  model_settings.py  policy.py  skill_registry.py  store.py  store_public.py
backend/app/agents/statistics/: __init__.py  agent.py  models.py  prompts.py  store.py  tools.py
backend/app/api/: serv.py
backend/app/api/routes/: agent.py  auth.py  checkin.py  feedback.py  meeting.py  meeting_agent.py  post.py  statistics_agent.py  stats.py  timing.py
backend/app/db/: core.py  stats.py  supabase.py
backend/app/db/tests/: test_stats_awards.py
backend/app/meeting_agent/: __init__.py  agent.py  history.py  models.py  normalize.py  prompts.py  segment_ids.py  store.py  timing.py  tools.py  validators.py
backend/app/meeting_agent/tests/: conftest.py  test_agent_smoke.py  test_history.py  test_models.py  test_prompts.py  (+6 more)
backend/app/models/: agent.py  checkin.py  feedback.py  meeting.py  meeting_agent.py  post.py  statistics_agent.py  stats.py  timing.py  users.py  wechat_user.py
backend/app/services/: meeting_lookup.py  meeting_preview_markdown.py  meeting_stats.py  member_directory.py
backend/app/statistics_agent/: __init__.py  agent.py  models.py  prompts.py  store.py  tools.py
backend/app/utils/: meeting.py  prompts.py  wechat.py
backend/scripts/: restore-db.sh
backend/supabase/migrations/: 20260424000000_meeting_agent_tables.sql  20260429000000_agent_router_decisions.sql  20260430010000_unify_agent_history.sql  20260430020000_drop_agent_router_decisions.sql  20260510000000_agent_public_tables.sql  20260510010000_harden_agent_public_rpc.sql  20260511000000_cleanup_agent_rate_limits_public.sql
backend/supabase_migrations/: 20260424_agent_tables.sql  20260427_statistics_agent_tables.sql  20260430_agent_unified_turns.sql  20260430_drop_agent_turns_specialist_seq.sql
(+213 files in other folders)
