[project]
name = "soarhigh-backend"
version = "0.1.0"
description = "Backend for SoarHigh Toastmaster Club"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "supabase>=2.11.0",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.1",
]

[tool.ruff]
lint.select = ["E", "F", "I", "RUF"]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
