[project]
name = "soarhigh-backend"
version = "0.1.0"
description = "Backend for SoarHigh Toastmasters Club"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "supabase>=2.11.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx[socks]>=0.27.2",
    "openai>=1.59.7",
    "oss2>=2.19.1",
    "pydantic-ai>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.1",
    "ipdb>=0.13.13",
    "types-python-jose>=3.3.4.20240106",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
lint.select = ["E", "F", "I", "RUF"]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
markers = ["live: requires live LLM provider; run with -m live"]
asyncio_mode = "auto"
# Skip live-marked tests by default. Opt in with `-m live` when you want
# to actually hit the provider — e.g. after changing the API key or model.
addopts = "-m 'not live'"
